--- a/dialogs/task/TaskForm.ui
+++ b/dialogs/task/TaskForm.ui
@@ -24,7 +24,7 @@
      <x>20</x>
      <y>10</y>
      <width>341</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -36,6 +36,9 @@
    </property>
    <property name="text">
     <string>Task form title</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_submit">
