--- a/dialogs/task/TaskShow.ui
+++ b/dialogs/task/TaskShow.ui
@@ -18,6 +18,11 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">#label_dateE {
+	font-size: 14px;
+}</string>
+  </property>
   <widget class="QPushButton" name="pushButton_edit">
    <property name="geometry">
     <rect>
@@ -111,8 +116,7 @@
      <widget class="QLabel" name="label_dateE">
       <property name="font">
        <font>
-        <weight>75</weight>
-        <bold>true</bold>
+        <pointsize>-1</pointsize>
        </font>
       </property>
       <property name="text">
