--- a/resources/Resources.qrc
+++ b/resources/Resources.qrc
@@ -3,9 +3,9 @@
         <file alias="loading.gif">gifs/loading.gif</file>
     </qresource>
     <qresource prefix="/html">
-        <file alias="help.html">html/help.html</file>
         <file alias="invoice_receipt_template.html">html/invoice_receipt_template.html</file>
         <file alias="report_template.html">html/report_template.html</file>
+        <file alias="user_guide.html">html/user_guide.html</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="background_blue">images/background_blue.jpg</file>
