Fixed a problem with Job and Expense forms not allowing prices to be typed in easily, and also customer field in the Job form not being set to the Customer just added with 'Add new customer' button for new Jobs

--- a/dialogs/job/JobForm.ui
+++ b/dialogs/job/JobForm.ui
@@ -283,7 +283,7 @@ QListWidget, QTableWidget, QPlainTextEdit {
     <rect>
      <x>70</x>
      <y>370</y>
-     <width>301</width>
+     <width>313</width>
      <height>125</height>
     </rect>
    </property>
@@ -334,7 +334,7 @@ QListWidget, QTableWidget, QPlainTextEdit {
        <string>£</string>
       </property>
       <property name="maximum">
-       <double>100000.000000000000000</double>
+       <double>1000000000.000000000000000</double>
       </property>
      </widget>
     </item>
